# match_analyzer

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: la_liga_dec_2025.csv  premier_league_dec_2025.csv  serie_a_dec_2025.csv
exports/: premier_league_dec_2025_20260109_020421.csv  premier_league_dec_2025_20260109_020421.txt
src/match_analyzer/: __main__.py  cli.py  config.py  io_utils.py  logger.py
src/match_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/match_analyzer/analysis/: metrics.py  models.py  report.py
