[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "match-analyzer"
version = "0.1.0"
description = "CLI tool that analyzes football match datasets and exports league reports."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
match_analyzer = "match_analyzer.cli:main"
